# wf-dash

./: README.md  meson.build  shader-dock.cpp
metadata/: shader-dock.xml
